fix spacing of card meta info
github has a 4px margin-top which looks a bit better; steal it

--- a/css/main.less
+++ b/css/main.less
@@ -363,6 +363,7 @@ a {
   }
 
   .card-meta {
+    margin-top: 4px;
     font-size: 12px;
     color: @gray-600;
     line-height: 1.4;
